# mli

./: .gitignore  CMakeLists.txt  README.md
cmake/: MLIConfig.cmake.in
include/mlir/: CMakeLists.txt
include/mlir/Interpreter/: CMakeLists.txt  Interpreter.h  InterpreterOpInterface.h  InterpreterOpInterface.td
include/mlir/Interpreter/Dialects/: FuncInterpreter.h  LLVMInterpreter.h
lib/: CMakeLists.txt
lib/Interpreter/: CMakeLists.txt  Interpreter.cpp  InterpreterOpInterface.cpp
lib/Interpreter/Dialects/: CMakeLists.txt
lib/Interpreter/Dialects/Func/: CMakeLists.txt  FuncInterpreter.cpp
lib/Interpreter/Dialects/LLVM/: CMakeLists.txt  LLVMInterpreter.cpp
src/: CMakeLists.txt  MLI.cpp
test/: basic.mlir  test-llvmir.mlir
